style.css
p img {
    width: 70%;
    margin: auto;
    display: block;
}

a img {
    max-height: 350px;
    margin: auto;
    display: block;
}

td {
    width: 200px;
    text-align: center;
    vertical-align: middle;
}

table {
    margin: auto;
    margin-bottom: 50px;
}

#content {
    max-width: 1200px;
}

#content ol, #content ul {
    line-height: 150%;
}
li {
    margin-bottom: 10px;
}
.note .org-ul, .important .org-ul, .attention .org-ul, .caution .org-ul, blockquote .org-ul {
    margin-bottom: 0px;
}

